Fix z-index issue in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ body {
     left: 0;
     right: 0;
     text-align: center;
-    /* z-index: 10; */
+    z-index: 10;
     animation-name: dropHeader;
     animation-iteration-count: 1;
     animation-timing-function: ease;
